force-app/main/default/objects/Patient__x/Patient__x.object-meta.xml
<CustomObject>
    <description>Patient</description>
    <externalDataSource>ExamplePatientApi</externalDataSource>
    <externalName>Patient</externalName>
    <label>Patient</label>
    <pluralLabel>Patient</pluralLabel>
</CustomObject>