force-app/main/default/objects/Patient__x/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <description>Address1</description>
    <externalDeveloperName>Address1</externalDeveloperName>
    <label>Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>