force-app/main/default/objects/Patient__x/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>DOB</description>
    <externalDeveloperName>DOB</externalDeveloperName>
    <label>DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>