force-app/main/default/objects/Patient__x/fields/PatientId__c.field-meta.xml
<CustomField>
    <fullName>PatientId__c</fullName>
    <description>PatientId</description>
    <externalDeveloperName>PatientId</externalDeveloperName>
    <label>PatientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>