force-app/main/default/objects/Patient__x/fields/PhoneCell__c.field-meta.xml
<CustomField>
    <fullName>PhoneCell__c</fullName>
    <description>PhoneCell</description>
    <externalDeveloperName>PhoneCell</externalDeveloperName>
    <label>PhoneCell</label>
    <length>255</length>
    <type>Text</type>
</CustomField>