force-app/main/default/objects/Patient__x/fields/PhoneHome__c.field-meta.xml
<CustomField>
    <fullName>PhoneHome__c</fullName>
    <description>PhoneHome</description>
    <externalDeveloperName>PhoneHome</externalDeveloperName>
    <label>PhoneHome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>