force-app/main/default/objects/Patient__x/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>Zip</description>
    <externalDeveloperName>Zip</externalDeveloperName>
    <label>Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>